-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.8.1
-
Windows
-
f6aba961979270820aa6c1b863c9a4aedcc1cdff
Project A (a subdir project) contains another project B. In filesystem, project A and B are two folders in the same folder (i.e. B is not contained in A in the filesystem). Both projects have a mercurial repo, with the default push url be x.com/a and x.com/b. The behavior is inconsistent.
When a file in B is opened, the commit behavior is normal, it refers to the repo in B, but the push behavior (and pull) has the wrong default push url, which is x.com/a, while it should x.com/b.
And the push result is "repository is unrelated" since it executed push in B but with A's url, x.com/a.
For Gerrit Dashboard: QTCREATORBUG-10261 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
79061,1 | Hg: Improve push/pull handling | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |