Hg: Improve push/pull handling

* Use paths/default-push and paths/default Urls as appropriate
* Read the settings from the project location except when the
  currently open file is not below that project directory.

  This makes things work for QTCREATORBUG-10261 without breaking
  .hgsubs (which are required to be children of the top-level
  repository.

Task-number: QTCREATORBUG-10261
Change-Id: Ie7cc4b9a420f17e27b69eae93fb9985e1a218d6e
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>